--- a/gb/21/9/9/n13221168.md
+++ b/gb/21/9/9/n13221168.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wjcmfz366/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wjcmfz366/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wjcmfz366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wjcmfz366/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wjcmfz366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>移动的人生 在阿根廷搭便车遇见善良的司机</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13247933-shutterstock_357819458-600x400.jpg" />
 <h6>搭便车有一项义务责任，就是让司机保持清醒。图为长途开车的卡车司机。（Shutterstock）
 </h6>
 <hr>
-	<p>【编者按】便车之旅，发生在从一个定点移动到下一个定点的途中。这个移动方式，能钻入观光手册的留白、<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C.md#1">旅行</a>团体验不了的生活，而且<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E6%90%AD%E4%BE%BF%E8%BD%A6.md#1">搭便车</a>看似随机，实则一点也不，因为会选择如此<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C.md#1">旅行</a>，和会选择为了旅人停下车的人，往往有着相同特质。而地图上的空白处“一定存在着什么”，搭便车正是田野调查这些空白里人、事、物的好方法。在不搭便车就浑身不舒服的5年时光里，作者李易安搭了总计135趟便车，足迹横跨南美、欧洲、中亚，移动了3万5千6百公里。本文是作者在<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>搭长途卡车便车，和司机一段萍水相逢、奇特又温馨经历。</p>
+	<p>【编者按】便车之旅，发生在从一个定点移动到下一个定点的途中。这个移动方式，能钻入观光手册的留白、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C.md#1">旅行</a>团体验不了的生活，而且<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%90%AD%E4%BE%BF%E8%BD%A6.md#1">搭便车</a>看似随机，实则一点也不，因为会选择如此<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%97%85%E8%A1%8C.md#1">旅行</a>，和会选择为了旅人停下车的人，往往有着相同特质。而地图上的空白处“一定存在着什么”，搭便车正是田野调查这些空白里人、事、物的好方法。在不搭便车就浑身不舒服的5年时光里，作者李易安搭了总计135趟便车，足迹横跨南美、欧洲、中亚，移动了3万5千6百公里。本文是作者在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>搭长途卡车便车，和司机一段萍水相逢、奇特又温馨经历。</p>
 <p>＊＊＊＊＊＊</p>
-<p>当我们震慑于巴塔哥尼亚无边无际的辽阔时，司机们却正被这看似一成不变的单调景色催眠着。长途<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E5%8D%A1%E8%BD%A6%E5%8F%B8%E6%9C%BA.md#1">卡车司机</a>时常一天工作十二小时以上，除了吃饭睡觉都在开车。疲劳随着里程增加不停累积，而这条公路格外笔直，车辆又少，稍不注意便会打起瞌睡。艾斯特班习惯每隔一段时间调整坐姿，接着抽根烟或喝玛黛茶来提神。</p>
-<p>我们当然没有忘记，“不择手段维持司机清醒”是<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E6%90%AD%E4%BE%BF%E8%BD%A6.md#1">搭便车</a>的人的义务与责任。我们一会拿出奇异果喂食，一会要他教我们西班牙语，一会又帮他按摩肩颈；不管使出哪种招数，他都会配合地立即恢复精神，再开玩笑板起脸孔对我们说：“如果你们睡着，我就把你们丢下车！”</p>
-<p>然而被睡魔抓走的总是他。就在艾斯特班眼皮又快阖上时，我们唱起轻快的台语歌〈丢丢铜仔〉，“火车行到伊都阿摸伊都丢～”没想到他竟然欢快地跟着打起节拍。眼见魔音传脑之法奏效，我们不要脸地也把国旗歌儿歌流行歌都各唱了一轮。在我们央求之下，他也用低沉嗓音哼出<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>国歌。就在这残破又激昂的歌声中，我们和面恶心善的艾斯特班渐渐熟稔。</p>
+<p>当我们震慑于巴塔哥尼亚无边无际的辽阔时，司机们却正被这看似一成不变的单调景色催眠着。长途<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%A1%E8%BD%A6%E5%8F%B8%E6%9C%BA.md#1">卡车司机</a>时常一天工作十二小时以上，除了吃饭睡觉都在开车。疲劳随着里程增加不停累积，而这条公路格外笔直，车辆又少，稍不注意便会打起瞌睡。艾斯特班习惯每隔一段时间调整坐姿，接着抽根烟或喝玛黛茶来提神。</p>
+<p>我们当然没有忘记，“不择手段维持司机清醒”是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%90%AD%E4%BE%BF%E8%BD%A6.md#1">搭便车</a>的人的义务与责任。我们一会拿出奇异果喂食，一会要他教我们西班牙语，一会又帮他按摩肩颈；不管使出哪种招数，他都会配合地立即恢复精神，再开玩笑板起脸孔对我们说：“如果你们睡着，我就把你们丢下车！”</p>
+<p>然而被睡魔抓走的总是他。就在艾斯特班眼皮又快阖上时，我们唱起轻快的台语歌〈丢丢铜仔〉，“火车行到伊都阿摸伊都丢～”没想到他竟然欢快地跟着打起节拍。眼见魔音传脑之法奏效，我们不要脸地也把国旗歌儿歌流行歌都各唱了一轮。在我们央求之下，他也用低沉嗓音哼出<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%BF%E6%A0%B9%E5%BB%B7.md#1">阿根廷</a>国歌。就在这残破又激昂的歌声中，我们和面恶心善的艾斯特班渐渐熟稔。</p>
 <p>如果一个人的住所可视为自我形象的延伸，那艾斯特班的车厢就是他的肖像画，粗犷又豪迈。车内的每个缝隙里都塞满了生活用品，衣服、毛巾、锅碗、医药箱全在他伸手可及之处。地上有花生的皮屑，因为他喜欢抱着一包花生慢慢嚼，搓掉的咖啡色花生皮就丢在脚边；车窗旁及排档附近布有烟灰，那是在他顺手一弹之后遗落的片状白灰。如果硬要分成工作和休息区域的话，以驾驶座为界，后方是棉被衣物交叠的单人睡铺，休息即躺下，躺下即休息。</p>
 <p>夜晚时，拉上车窗和挡风玻璃的帘子，车厢就瞬间成为室内私人空间，帘幕阻挡隔日清晨的阳光，也遮盖路人目光。但我猜想，艾斯特班才不会满意这种分法；对他来说，移动是工作，车子静止就是休息，所有在静止后延展开来的活动都能称作休闲。不过，我们坐在车里时似乎打乱了这个规则：由于我们的出现，移动也难得变成了一种玩乐。</p>
 <p>另一个完全展现他混乱风格的，就是挡风玻璃前的置物架，那上头有一大叠资料，货物清单、邮件往来纪录、广告传单，全部散乱其中。那些纸张不是布满折痕，就是有饮料洒过的痕迹。然而，里头夹杂了一个透明资料夹袋，干净得有些突兀；夹袋中放着一张六岁女孩的照片，艾斯特班心爱的孙女在里面甜美地笑着。</p>
@@ -18,7 +18,7 @@
 <p>艾斯特班拿出手机，快速找到孙女的照片和一段在游乐园玩的影片，开心地和我们分享。他的表情太过柔和，和千万个祖父的慈祥脸孔融在一起了。</p>
 <p>“你们有兄弟姊妹吗？爸妈是做什么的？”</p>
 <p>他对我们的家人非常好奇，对我们跑到这么远的地方、用这种方式旅行也很不解。我们调皮地回他，这样玩才会遇到你啊！</p>
-<p>几乎所有跟<ahref="https://github.com/wjcmfz366/djy/blob/master/gb/tag/%E5%8D%A1%E8%BD%A6%E5%8F%B8%E6%9C%BA.md#1">卡车司机</a>相处的俗套脚本中，他们都会提到那些分布各地、性格殊异的情人们。艾斯特班也有他对每个城市特殊的情感连结，不过，那更多是关于家人大女儿在布宜诺斯艾利斯，二儿子在布兰卡港，前妻在皮科特伦卡多。公路串起城市，也连向他的家人。移动的家屋是我们对流浪生活的浪漫想像，却是他为求经济收入的一种妥协。开车上路能供给家用，然而长时间离家的生活型态也阻隔了他的家庭生活。现代的通讯设备虽然能弥补距离上的疏远，但他偶尔还是会想念一群人待在同个空间中的烦臭吵闹。</p>
+<p>几乎所有跟<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%A1%E8%BD%A6%E5%8F%B8%E6%9C%BA.md#1">卡车司机</a>相处的俗套脚本中，他们都会提到那些分布各地、性格殊异的情人们。艾斯特班也有他对每个城市特殊的情感连结，不过，那更多是关于家人大女儿在布宜诺斯艾利斯，二儿子在布兰卡港，前妻在皮科特伦卡多。公路串起城市，也连向他的家人。移动的家屋是我们对流浪生活的浪漫想像，却是他为求经济收入的一种妥协。开车上路能供给家用，然而长时间离家的生活型态也阻隔了他的家庭生活。现代的通讯设备虽然能弥补距离上的疏远，但他偶尔还是会想念一群人待在同个空间中的烦臭吵闹。</p>
 <p>一路上，长辈式的叮咛没有少，也有许多静默无语的时刻。十一个小时过去，往南开了将近九百公里，我们终于在晚上快十点时抵达目的地。下交流道后，我们看见久违的点点灯火，天色已晚。</p>
 <p>“你们住哪？要送你们到哪里？”</p>
 <p>“我们搭帐篷，路边放我们下车就可以，谢谢！”</p>
@@ -48,41 +48,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/2/9/n10130848.md#1">小女孩骑着小马在雪地里兜风 来了个搭便“车”的家伙</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/5/9/n10375208.md#1">8旬阿婆走10公里采笋“脚酸”暖男给搭便车</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/8/28/n13194282.md#1">车子抛锚 英国新娘自己搭便车去参加婚礼</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/19/n13386010.md#1">人烟罕至的离岛村落 澎湖鸟屿成赏鸟圣地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/2/9/n10130848.md#1">小女孩骑着小马在雪地里兜风 来了个搭便“车”的家伙</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/9/n10375208.md#1">8旬阿婆走10公里采笋“脚酸”暖男给搭便车</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/28/n13194282.md#1">车子抛锚 英国新娘自己搭便车去参加婚礼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/19/n13386010.md#1">人烟罕至的离岛村落 澎湖鸟屿成赏鸟圣地</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10879954.md#1" target="_blank">林辉：共产党国家的“作秀公审”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/20/n13388317.md#1">【财商天下】大陆房企自救 老板亲自“输血”</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/22/n13391470.md#1">【拍案惊奇】彭帅现状凶险 胡锡进发片露马脚</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/19/n13386820.md#1">党媒再发“彭帅照”难平众怒 恐冲击北京冬奥</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/21/n13389524.md#1">彭帅现身不足以解疑虑 法外长：让她自己说话</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/wjcmfz366/djy/blob/master/gb/21/11/18/n13383514.md#1">你的腹肌有多强？做1个简单动作就知道</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wjcmfz366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/9/n13221168.htm">移动的人生 在阿根廷搭便车遇见善良的司机</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/9/n13221168.htm">移动的人生 在阿根廷搭便车遇见善良的司机</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wjcmfz366/djy/blob/master/gb/21/9/9/n13221168.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wjcmfz366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wjcmfz366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wjcmfz366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wjcmfz366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/9/9/n13221168.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
